--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>✨ CurioQuotes - Quote Generator</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+
+ <div class="logo">
+  <h1>
+    ✨ CurioQuotes - Quote Generator<br>
+    <span class="byline">— by <a href="https://swarnimstha.com.np" target="_blank">Swarnim Shrestha</a></span>
+  </h1>
+</div>
+
+
   <div class="container">
     <h1>Quote of the Day</h1>
     
