--- a/index.html
+++ b/index.html
@@ -13,7 +13,48 @@
   <div class="logo">
   <div class="logo-title">CurioQuotes</div>
   <div class="logo-subtitle">Unwrap Thoughts, One Quote at a Time</div>
-  <div class="logo-author">by <a href="#">Swarnim Shrestha</a></div>
+  <div class="logo-author">by <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CurioQuotes - Quote Generator</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="logo">
+  <div class="logo-title">CurioQuotes</div>
+  <div class="logo-subtitle">Unwrap Thoughts, One Quote at a Time</div>
+  <div class="logo-author">by <a href="https://swarnimstha.com.np" target="_blank" rel="noopener noreferrer">Swarnim Shrestha</a></div>
+</div>
+
+  <div class="container">
+    <h1>Quote of the Day</h1>
+    
+    <div class="quote-box">
+      <p id="quote">Loading...</p>
+      <span id="author">Loading...</span>
+    </div>
+    
+    <div class="buttons">
+      <button id="toggle-theme">🌙 Dark Mode</button>
+      <button id="new-quote">New Quote</button>
+      <button id="copy-quote">Copy</button>
+      <button id="tweet-quote">
+        <img src="assets/tweet.png" alt="Tweet" />
+        Tweet
+      </button>
+    </div>
+
+    <div id="loader" class="hidden">Loading...</div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html></div>
 </div>
 
   <div class="container">
